@@ -1,5 +1,9 @@
 This file documents the revision history for mod_gearman.
 
+next:
+          - code cleanup, use INITIATE events for naemon and nagios 4
+          - fix orphaned checks in naemon
+
 3.0.7 Fri Nov 30 17:03:35 CET 2018
           - change timestamp format to double
           - add support for latest nagios core
